force-app/main/default/objects/Equipment__c/fields/Cat1_Count__c.field-meta.xml
<CustomField>
    <fullName>Cat1_Count__c</fullName>
    <label>Cat1 Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>