force-app/main/default/objects/Equipment__c/fields/Cat5_Count__c.field-meta.xml
<CustomField>
    <fullName>Cat5_Count__c</fullName>
    <label>Cat5 Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>