force-app/main/default/objects/Equipment__c/fields/Cat5_Message__c.field-meta.xml
<CustomField>
    <fullName>Cat5_Message__c</fullName>
    <label>Cat5 Message</label>
    <length>40</length>
    <type>Text</type>
</CustomField>