force-app/main/default/objects/Equipment__c/fields/Category_1_Status__c.field-meta.xml
<CustomField>
    <fullName>Category_1_Status__c</fullName>
    <formula>IF( Category_1_Due_Days__c &gt; 0,

&quot;Not Completed&quot;,

&quot;Completed on Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category 1 Status</label>
    <type>Text</type>
</CustomField>