force-app/main/default/objects/Equipment__c/fields/Category_5_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Category_5_Due_Days__c</fullName>
    <formula>IF(TODAY() - Next_Category_5_Date__c &gt; 0, TODAY() - Next_Category_5_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category 5 Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>