force-app/main/default/objects/Equipment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Elevator</fullName>
            </value>
            <value>
                <fullName>Freight Elevator</fullName>
            </value>
            <value>
                <fullName>Escalator</fullName>
            </value>
            <value>
                <fullName>Moving Walks</fullName>
            </value>
            <value>
                <fullName>Dumbwaiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>