force-app/main/default/objects/Equipment__c/fields/Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Type__c</fullName>
    <label>Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Controller_Type</valueSetName>
    </valueSet>
</CustomField>