force-app/main/default/objects/Equipment__c/fields/Days_CAT1_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_CAT1_Past_Due__c</fullName>
    <label>Days CAT1 Past Due</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>