force-app/main/default/objects/Equipment__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <label>Debug</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>