force-app/main/default/objects/Equipment__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <inlineHelpText>For Elev 01, Elev 02, - Elev 09 - Be sure to enter the 0 in front, so that it displays on CARE in chronological order.</inlineHelpText>
    <label>Display Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>