force-app/main/default/objects/Equipment__c/fields/Has_Monthly_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Has_Monthly_Requirement__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Frequency_of_service__c, &apos;Monthly&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Monthly Requirement</label>
    <type>Checkbox</type>
</CustomField>