force-app/main/default/objects/Equipment__c/fields/Inspection_Witness__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Witness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Witness</label>
    <type>Checkbox</type>
</CustomField>