force-app/main/default/objects/Equipment__c/fields/Last_12_Month_CB_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_CB_Count__c</fullName>
    <inlineHelpText>Number of Callbacks within the last 12 months</inlineHelpText>
    <label>Last 12 Month CB Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>