force-app/main/default/objects/Equipment__c/fields/Last_12_Month_PM_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_PM_Count__c</fullName>
    <label>Last 12 Month PM Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>