force-app/main/default/objects/Equipment__c/fields/Last_12_Month_PM_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_PM_Message__c</fullName>
    <label>Last 12 Month PM Message</label>
    <length>70</length>
    <type>Text</type>
</CustomField>