force-app/main/default/objects/Equipment__c/fields/Last_12_Month_PM_Percent__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Month_PM_Percent__c</fullName>
    <label>Last 12 Month PM Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>