force-app/main/default/objects/Equipment__c/fields/Last_30_Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Count__c</fullName>
    <label>Last 30 Day Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>