force-app/main/default/objects/Equipment__c/fields/Last_Cat5_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cat5_Date__c</fullName>
    <label>Last Cat5 Date</label>
    <type>Date</type>
</CustomField>