force-app/main/default/objects/Equipment__c/fields/Last_Category_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Category_1_Date__c</fullName>
    <label>Last Category 1 Date</label>
    <summarizedField>Schindler_Maintenance_Activity__c.VisitDate__c</summarizedField>
    <summaryFilterItems>
        <field>Schindler_Maintenance_Activity__c.Type__c</field>
        <operation>equals</operation>
        <value>TEST</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Schindler_Maintenance_Activity__c.Category__c</field>
        <operation>equals</operation>
        <value>Category 1</value>
    </summaryFilterItems>
    <summaryForeignKey>Schindler_Maintenance_Activity__c.Equipment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>