force-app/main/default/objects/Equipment__c/fields/Last_CB_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CB_Date__c</fullName>
    <inlineHelpText>Last Callback date</inlineHelpText>
    <label>Last CB Date</label>
    <type>Date</type>
</CustomField>