force-app/main/default/objects/Equipment__c/fields/Last_Cleandown_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cleandown_Date__c</fullName>
    <label>Last Cleandown Date</label>
    <type>Date</type>
</CustomField>