force-app/main/default/objects/Equipment__c/fields/Last_Index_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Index_Test_Date__c</fullName>
    <label>Last Index Test Date</label>
    <type>Date</type>
</CustomField>