force-app/main/default/objects/Equipment__c/fields/Last_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PM_Date__c</fullName>
    <inlineHelpText>Last date where type = MNT</inlineHelpText>
    <label>Last PM Date</label>
    <type>Date</type>
</CustomField>