force-app/main/default/objects/Equipment__c/fields/Last_State_CAT5_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_State_CAT5_Date__c</fullName>
    <label>Last State CAT5 Date</label>
    <type>Date</type>
</CustomField>