force-app/main/default/objects/Equipment__c/fields/Last_State_CAT5_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_State_CAT5_Result__c</fullName>
    <label>Last State CAT5 Result</label>
    <length>30</length>
    <type>Text</type>
</CustomField>