force-app/main/default/objects/Equipment__c/fields/Last_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Reason__c</fullName>
    <label>Last Visit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>