force-app/main/default/objects/Equipment__c/fields/Load_Lb__c.field-meta.xml
<CustomField>
    <fullName>Load_Lb__c</fullName>
    <inlineHelpText>Load in pounds (Lds) e.g. 5,000</inlineHelpText>
    <label>Load (Lb)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>