force-app/main/default/objects/Equipment__c/fields/Maintenance_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Due_Days__c</fullName>
    <formula>IF(TODAY() - Next_Maintenance_Date__c &gt; 0, TODAY() - Next_Maintenance_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>