force-app/main/default/objects/Equipment__c/fields/Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status__c</fullName>
    <formula>IF(Maintenance_Due_Days__c &gt; 0 &amp;&amp; Has_Monthly_Requirement__c, 

&quot;Not Completed&quot;,

&quot;Completed on Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Status</label>
    <type>Text</type>
</CustomField>