force-app/main/default/objects/Equipment__c/fields/Maintenance_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status_Image__c</fullName>
    <formula>IF(Maintenance_Due_Days__c &gt; 0 &amp;&amp; Has_Monthly_Requirement__c, 

IMAGE(&quot;/resource/AuditmateCustomer/images/table-status-2.png&quot;, &quot;Past Due&quot;) + &quot; Past Due&quot;, 

IMAGE(&quot;/resource/AuditmateCustomer/images/table-status-1.png&quot; , &quot;Current&quot;) + &quot; Current&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Status Image</label>
    <type>Text</type>
</CustomField>