force-app/main/default/objects/Equipment__c/fields/Next_Cat5_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Cat5_Date__c</fullName>
    <label>Next Cat5 Date</label>
    <type>Date</type>
</CustomField>