force-app/main/default/objects/Equipment__c/fields/Next_Category_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Category_1_Date__c</fullName>
    <formula>Last_Category_1_Date__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Category 1 Date</label>
    <type>Date</type>
</CustomField>