force-app/main/default/objects/Equipment__c/fields/Next_Category_5_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Category_5_Date__c</fullName>
    <formula>Last_Category_5_Date__c + 1825</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Category 5 Date</label>
    <type>Date</type>
</CustomField>