force-app/main/default/objects/Equipment__c/fields/Next_Cleandown_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Cleandown_Date__c</fullName>
    <label>Next Cleandown Date</label>
    <type>Date</type>
</CustomField>