force-app/main/default/objects/Equipment__c/fields/Next_Index_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Index_Test_Date__c</fullName>
    <label>Next Index Test Date</label>
    <type>Date</type>
</CustomField>