force-app/main/default/objects/Equipment__c/fields/Next_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Date__c</fullName>
    <formula>IF( UPPER(TEXT(Opportunity__r.Frequency_of_service__c)) == &apos;PERIODICALLY&apos;,
NULL,
Last_Maintenance_Date__c + 30
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Maintenance Date</label>
    <type>Date</type>
</CustomField>