force-app/main/default/objects/Equipment__c/fields/Next_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_PM_Date__c</fullName>
    <label>Next PM Date</label>
    <type>Date</type>
</CustomField>