force-app/main/default/objects/Equipment__c/fields/Number_of_Maintenance_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Maintenance_Visits__c</fullName>
    <label># Maintenance Visits</label>
    <summaryFilterItems>
        <field>Schindler_Maintenance_Activity__c.Type__c</field>
        <operation>equals</operation>
        <value>MNT</value>
    </summaryFilterItems>
    <summaryForeignKey>Schindler_Maintenance_Activity__c.Equipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>