force-app/main/default/objects/Equipment__c/fields/Number_of_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repairs__c</fullName>
    <label># Repairs</label>
    <summaryFilterItems>
        <field>Schindler_Maintenance_Activity__c.Type__c</field>
        <operation>equals</operation>
        <value>REP</value>
    </summaryFilterItems>
    <summaryForeignKey>Schindler_Maintenance_Activity__c.Equipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>