force-app/main/default/objects/Equipment__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Due</label>
    <type>Checkbox</type>
</CustomField>