force-app/main/default/objects/Equipment__c/fields/PM_Message__c.field-meta.xml
<CustomField>
    <fullName>PM_Message__c</fullName>
    <label>PM Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>