force-app/main/default/objects/Equipment__c/fields/Remote_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Remote_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Monitoring</label>
    <type>Checkbox</type>
</CustomField>