force-app/main/default/objects/Equipment__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <inlineHelpText>Speed in feet/min e.g.150</inlineHelpText>
    <label>Speed (f/min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>