force-app/main/default/objects/Equipment__c/fields/State_Certificate_First_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Certificate_First_Issue_Date__c</fullName>
    <description>When the equipment was born.</description>
    <inlineHelpText>When the equipment was born.</inlineHelpText>
    <label>State Certificate First Issue Date</label>
    <type>Date</type>
</CustomField>