force-app/main/default/objects/Equipment__c/fields/State_Certificate_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Certificate_Issue_Date__c</fullName>
    <label>State Certificate Issue Date</label>
    <type>Date</type>
</CustomField>