force-app/main/default/objects/Equipment__c/fields/State_Elevator_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Elevator_Type__c</fullName>
    <label>Elevator Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>