force-app/main/default/objects/Equipment__c/fields/State_ID__c.field-meta.xml
<CustomField>
    <fullName>State_ID__c</fullName>
    <description>Municipality equipment id number.</description>
    <inlineHelpText>Municipality equipment id number. Could also be: License #, State ID, or Certificate.</inlineHelpText>
    <label>Conveyance ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>