force-app/main/default/objects/Equipment__c/fields/State_Location_City__c.field-meta.xml
<CustomField>
    <fullName>State_Location_City__c</fullName>
    <label>Location City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>