force-app/main/default/objects/Equipment__c/fields/State_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>State_Location_Description__c</fullName>
    <label>Location Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>