force-app/main/default/objects/Equipment__c/fields/State_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>State_Location_Street__c</fullName>
    <label>Location Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>