force-app/main/default/objects/Equipment__c/fields/State_Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>State_Location_Zip__c</fullName>
    <label>Location Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>