force-app/main/default/objects/Equipment__c/fields/State_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Owner_Name__c</fullName>
    <label>State-Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>