force-app/main/default/objects/Equipment__c/fields/State_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Region__c</fullName>
    <label>State-Region</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>