force-app/main/default/objects/Equipment__c/fields/State_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>