force-app/main/default/objects/Equipment__c/fields/State_Status__c.field-meta.xml
<CustomField>
    <fullName>State_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>