force-app/main/default/objects/Equipment__c/fields/Stops__c.field-meta.xml
<CustomField>
    <fullName>Stops__c</fullName>
    <label>Stops</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>