force-app/main/default/objects/Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
            <value>
                <fullName>Geared</fullName>
            </value>
            <value>
                <fullName>Gearless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dumbwaiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>