force-app/main/default/objects/Equipment__c/fields/Vendor_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Name__c</fullName>
    <formula>Opportunity__r.Elevator_Vendor_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Account Name</label>
    <type>Text</type>
</CustomField>