force-app/main/default/objects/Equipment__c/fields/Vendor_Equipment_No__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Equipment_No__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Vendor&apos;s unique ID for this equipment.</inlineHelpText>
    <label>Vendor Equipment #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>