force-app/main/default/objects/Equipment__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Opportunity__r.Account.Vendor_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>