force-app/main/default/objects/Equipment__c/listViews/Last_12_Months_Maintenance.listView-meta.xml
<ListView>
    <fullName>Last_12_Months_Maintenance</fullName>
    <columns>NAME</columns>
    <columns>Last_12_Month_PM_Percent__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Last 12 Months Maintenance</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>